--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,22 +1,64 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6282c1">  <td>23/12/14 16:15:21</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTests.LoginTest(java.lang.String,java.lang.String)[pri:0, instance:testcase.LoginTests@4d1c005e]">LoginTest</td> 
-  <td>main@613784740</td>   <td></td> </tr>
-<tr bgcolor="6282c1">  <td>23/12/14 16:16:11</td>   <td>50823</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTests.LoginTest(java.lang.String,java.lang.String)[pri:0, instance:testcase.LoginTests@4d15107f]">LoginTest</td> 
-  <td>main@613784740</td>   <td></td> </tr>
-<tr bgcolor="6282c1">  <td>23/12/14 16:16:59</td>   <td>98192</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTests.LoginTest(java.lang.String,java.lang.String)[pri:0, instance:testcase.LoginTests@79207381]">LoginTest</td> 
-  <td>main@613784740</td>   <td></td> </tr>
-<tr bgcolor="9869f4">  <td>23/12/14 16:15:17</td>   <td>-3236</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String,java.lang.String)[pri:0, instance:testcase.LoginTests@4d1c005e]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@613784740</td>   <td></td> </tr>
-<tr bgcolor="9869f4">  <td>23/12/14 16:15:24</td>   <td>3710</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String,java.lang.String)[pri:0, instance:testcase.LoginTests@4d15107f]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@613784740</td>   <td></td> </tr>
-<tr bgcolor="9869f4">  <td>23/12/14 16:16:14</td>   <td>53364</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String,java.lang.String)[pri:0, instance:testcase.LoginTests@79207381]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@613784740</td>   <td></td> </tr>
-<tr bgcolor="9869f4">  <td>23/12/14 16:15:24</td>   <td>3109</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.takeScreenshotOnFailure(org.testng.ITestResult)[pri:0, instance:testcase.LoginTests@4d1c005e]">&lt;&lt;takeScreenshotOnFailure</td> 
-<td>&nbsp;</td>  <td>main@613784740</td>   <td></td> </tr>
-<tr bgcolor="9869f4">  <td>23/12/14 16:16:13</td>   <td>52087</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.takeScreenshotOnFailure(org.testng.ITestResult)[pri:0, instance:testcase.LoginTests@4d15107f]">&lt;&lt;takeScreenshotOnFailure</td> 
-<td>&nbsp;</td>  <td>main@613784740</td>   <td></td> </tr>
-<tr bgcolor="9869f4">  <td>23/12/14 16:17:04</td>   <td>103293</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.takeScreenshotOnFailure(org.testng.ITestResult)[pri:0, instance:testcase.LoginTests@79207381]">&lt;&lt;takeScreenshotOnFailure</td> 
-<td>&nbsp;</td>  <td>main@613784740</td>   <td></td> </tr>
+<tr bgcolor="69fba1">  <td>23/12/14 20:29:07</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AssetTests.AssetTest(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:testcase.AssetTests@20b2475a]">AssetTest</td> 
+  <td>TestNG-test=Test2-2@1246588180</td>   <td></td> </tr>
+<tr bgcolor="aea295">  <td>23/12/14 20:29:07</td>   <td>170</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AttendanceTest.Attendance(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:testcase.AttendanceTest@7857fe2]">Attendance</td> 
+  <td>TestNG-test=Test2-3@1731479766</td>   <td></td> </tr>
+<tr bgcolor="a8adcf">  <td>23/12/14 20:28:14</td>   <td>-52647</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SignoutTest.LoginTest(java.lang.String,java.lang.String)[pri:0, instance:testcase.SignoutTest@5965d37]">LoginTest</td> 
+  <td>TestNG-test=Test1-3@390436870</td>   <td></td> </tr>
+<tr bgcolor="f699d3">  <td>23/12/14 20:28:14</td>   <td>-52391</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="StaffTest.LoginTest(java.lang.String,java.lang.String)[pri:0, instance:testcase.StaffTest@5ddeb7cb]">LoginTest</td> 
+  <td>TestNG-test=Test1-1@708971628</td>   <td></td> </tr>
+<tr bgcolor="649a64">  <td>23/12/14 20:28:14</td>   <td>-52516</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TicketsTest.LoginTest(java.lang.String,java.lang.String)[pri:0, instance:testcase.TicketsTest@673fdbce]">LoginTest</td> 
+  <td>TestNG-test=Test1-2@1334249887</td>   <td></td> </tr>
+<tr bgcolor="aea295">  <td>23/12/14 20:28:53</td>   <td>-13881</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AttendanceTest.LoginTest(java.lang.String,java.lang.String)[pri:0, instance:testcase.AttendanceTest@7857fe2]">LoginTest</td> 
+  <td>TestNG-test=Test2-3@1731479766</td>   <td></td> </tr>
+<tr bgcolor="756369">  <td>23/12/14 20:29:04</td>   <td>-2478</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EventsTest.LoginTest(java.lang.String,java.lang.String)[pri:0, instance:testcase.EventsTest@6f43c82]">LoginTest</td> 
+  <td>TestNG-test=Test2-1@971245224</td>   <td></td> </tr>
+<tr bgcolor="756369">  <td>23/12/14 20:29:04</td>   <td>-2478</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EventsTest.LoginTest(java.lang.String,java.lang.String)[pri:0, instance:testcase.EventsTest@6f43c82]">LoginTest</td> 
+  <td>TestNG-test=Test2-1@971245224</td>   <td></td> </tr>
+<tr bgcolor="756369">  <td>23/12/14 20:29:04</td>   <td>-2478</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EventsTest.LoginTest(java.lang.String,java.lang.String)[pri:0, instance:testcase.EventsTest@6f43c82]">LoginTest</td> 
+  <td>TestNG-test=Test2-1@971245224</td>   <td></td> </tr>
+<tr bgcolor="69fba1">  <td>23/12/14 20:28:53</td>   <td>-13833</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AssetTests.LoginTest(java.lang.String,java.lang.String)[pri:0, instance:testcase.AssetTests@20b2475a]">LoginTest</td> 
+  <td>TestNG-test=Test2-2@1246588180</td>   <td></td> </tr>
+<tr bgcolor="9869f4">  <td>23/12/14 20:28:09</td>   <td>-57993</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String,java.lang.String)[pri:0, instance:testcase.SignoutTest@5965d37]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test1-3@390436870</td>   <td></td> </tr>
+<tr bgcolor="9869f4">  <td>23/12/14 20:28:09</td>   <td>-57993</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String,java.lang.String)[pri:0, instance:testcase.TicketsTest@673fdbce]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test1-2@1334249887</td>   <td></td> </tr>
+<tr bgcolor="9869f4">  <td>23/12/14 20:28:09</td>   <td>-57993</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String,java.lang.String)[pri:0, instance:testcase.StaffTest@5ddeb7cb]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test1-1@708971628</td>   <td></td> </tr>
+<tr bgcolor="9869f4">  <td>23/12/14 20:29:04</td>   <td>-2760</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String,java.lang.String)[pri:0, instance:testcase.AssetTests@20b2475a]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test2-2@1246588180</td>   <td></td> </tr>
+<tr bgcolor="9869f4">  <td>23/12/14 20:29:04</td>   <td>-2725</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String,java.lang.String)[pri:0, instance:testcase.AttendanceTest@7857fe2]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test2-3@1731479766</td>   <td></td> </tr>
+<tr bgcolor="9869f4">  <td>23/12/14 20:29:04</td>   <td>-2483</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String,java.lang.String)[pri:0, instance:testcase.EventsTest@6f43c82]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test2-1@971245224</td>   <td></td> </tr>
+<tr bgcolor="9869f4">  <td>23/12/14 20:29:04</td>   <td>-2483</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String,java.lang.String)[pri:0, instance:testcase.EventsTest@6f43c82]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test2-1@971245224</td>   <td></td> </tr>
+<tr bgcolor="9869f4">  <td>23/12/14 20:29:04</td>   <td>-2483</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String,java.lang.String)[pri:0, instance:testcase.EventsTest@6f43c82]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test2-1@971245224</td>   <td></td> </tr>
+<tr bgcolor="9869f4">  <td>23/12/14 20:29:04</td>   <td>-2725</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String,java.lang.String)[pri:0, instance:testcase.AttendanceTest@7857fe2]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test2-3@1731479766</td>   <td></td> </tr>
+<tr bgcolor="9869f4">  <td>23/12/14 20:29:04</td>   <td>-2760</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String,java.lang.String)[pri:0, instance:testcase.AssetTests@20b2475a]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test2-2@1246588180</td>   <td></td> </tr>
+<tr bgcolor="9869f4">  <td>23/12/14 20:28:25</td>   <td>-41573</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.takeScreenshotOnFailure(org.testng.ITestResult)[pri:0, instance:testcase.SignoutTest@5965d37]">&lt;&lt;takeScreenshotOnFailure</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test1-3@390436870</td>   <td></td> </tr>
+<tr bgcolor="9869f4">  <td>23/12/14 20:28:45</td>   <td>-21513</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.takeScreenshotOnFailure(org.testng.ITestResult)[pri:0, instance:testcase.StaffTest@5ddeb7cb]">&lt;&lt;takeScreenshotOnFailure</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test1-1@708971628</td>   <td></td> </tr>
+<tr bgcolor="9869f4">  <td>23/12/14 20:28:35</td>   <td>-31573</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.takeScreenshotOnFailure(org.testng.ITestResult)[pri:0, instance:testcase.TicketsTest@673fdbce]">&lt;&lt;takeScreenshotOnFailure</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test1-2@1334249887</td>   <td></td> </tr>
+<tr bgcolor="9869f4">  <td>23/12/14 20:29:20</td>   <td>13557</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.takeScreenshotOnFailure(org.testng.ITestResult)[pri:0, instance:testcase.AssetTests@20b2475a]">&lt;&lt;takeScreenshotOnFailure</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test2-2@1246588180</td>   <td></td> </tr>
+<tr bgcolor="9869f4">  <td>23/12/14 20:29:04</td>   <td>-2460</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.takeScreenshotOnFailure(org.testng.ITestResult)[pri:0, instance:testcase.EventsTest@6f43c82]">&lt;&lt;takeScreenshotOnFailure</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test2-1@971245224</td>   <td></td> </tr>
+<tr bgcolor="9869f4">  <td>23/12/14 20:29:04</td>   <td>-2460</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.takeScreenshotOnFailure(org.testng.ITestResult)[pri:0, instance:testcase.EventsTest@6f43c82]">&lt;&lt;takeScreenshotOnFailure</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test2-1@971245224</td>   <td></td> </tr>
+<tr bgcolor="9869f4">  <td>23/12/14 20:29:30</td>   <td>23600</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.takeScreenshotOnFailure(org.testng.ITestResult)[pri:0, instance:testcase.AttendanceTest@7857fe2]">&lt;&lt;takeScreenshotOnFailure</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test2-3@1731479766</td>   <td></td> </tr>
+<tr bgcolor="9869f4">  <td>23/12/14 20:29:30</td>   <td>23600</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.takeScreenshotOnFailure(org.testng.ITestResult)[pri:0, instance:testcase.AttendanceTest@7857fe2]">&lt;&lt;takeScreenshotOnFailure</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test2-3@1731479766</td>   <td></td> </tr>
+<tr bgcolor="9869f4">  <td>23/12/14 20:29:04</td>   <td>-2460</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.takeScreenshotOnFailure(org.testng.ITestResult)[pri:0, instance:testcase.EventsTest@6f43c82]">&lt;&lt;takeScreenshotOnFailure</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test2-1@971245224</td>   <td></td> </tr>
+<tr bgcolor="9869f4">  <td>23/12/14 20:29:20</td>   <td>13557</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.takeScreenshotOnFailure(org.testng.ITestResult)[pri:0, instance:testcase.AssetTests@20b2475a]">&lt;&lt;takeScreenshotOnFailure</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test2-2@1246588180</td>   <td></td> </tr>
 </table>
