--- a/test-output/index.html
+++ b/test-output/index.html
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">4 methods,   4 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,12 +104,22 @@
                     <div class="method-list-content passed suite-Suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="testcase.TicketsTest" class="method navigator-link" hash-for-method="tickets_test">tickets_test</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="testcase.LoginTests" class="method navigator-link" hash-for-method="Invalid_LoginTest">Invalid_LoginTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="testcase.TicketsTest" class="method navigator-link" hash-for-method="tickets_test_incomplete_data">tickets_test_incomplete_data</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="testcase.LoginTests" class="method navigator-link" hash-for-method="Invalid_Password_Test">Invalid_Password_Test</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite" title="testcase.LoginTests" class="method navigator-link" hash-for-method="Invalid_Username_Test">Invalid_Username_Test</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite" title="testcase.LoginTests" class="method navigator-link" hash-for-method="Valid_LoginTest">Valid_LoginTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Suite -->
@@ -127,21 +137,35 @@
           <div class="suite-Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">testcase.TicketsTest</span>
+              <span class="class-name">testcase.LoginTests</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="tickets_test">
-                  </a> <!-- tickets_test -->
-                  <span class="method-name">tickets_test</span>
+                  <a name="Invalid_LoginTest">
+                  </a> <!-- Invalid_LoginTest -->
+                  <span class="method-name">Invalid_LoginTest</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="tickets_test_incomplete_data">
-                  </a> <!-- tickets_test_incomplete_data -->
-                  <span class="method-name">tickets_test_incomplete_data</span>
+                  <a name="Invalid_Password_Test">
+                  </a> <!-- Invalid_Password_Test -->
+                  <span class="method-name">Invalid_Password_Test</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="Invalid_Username_Test">
+                  </a> <!-- Invalid_Username_Test -->
+                  <span class="method-name">Invalid_Username_Test</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="Valid_LoginTest">
+                  </a> <!-- Valid_LoginTest -->
+                  <span class="method-name">Valid_LoginTest</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -163,7 +187,7 @@
     &lt;parameter name=&quot;browser&quot; value=&quot;chrome&quot;/&gt;
     &lt;parameter name=&quot;url&quot; value=&quot;https://hrm.qabible.in/hrms/admin&quot;/&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;testcase.TicketsTest&quot;/&gt;
+      &lt;class name=&quot;testcase.LoginTests&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Test_Chrome --&gt;
 &lt;/suite&gt; &lt;!-- Suite --&gt;
@@ -203,20 +227,28 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(4);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'tickets_test')
-data.setCell(0, 2, 'testcase.TicketsTest')
-data.setCell(0, 3, 8880);
+data.setCell(0, 1, 'Valid_LoginTest')
+data.setCell(0, 2, 'testcase.LoginTests')
+data.setCell(0, 3, 5720);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'tickets_test_incomplete_data')
-data.setCell(1, 2, 'testcase.TicketsTest')
-data.setCell(1, 3, 7302);
+data.setCell(1, 1, 'Invalid_LoginTest')
+data.setCell(1, 2, 'testcase.LoginTests')
+data.setCell(1, 3, 662);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'Invalid_Username_Test')
+data.setCell(2, 2, 'testcase.LoginTests')
+data.setCell(2, 3, 494);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'Invalid_Password_Test')
+data.setCell(3, 2, 'testcase.LoginTests')
+data.setCell(3, 3, 446);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 16 seconds</span>
+              <span class="suite-total-time">Total running time: 7 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -242,30 +274,54 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">testcase.TicketsTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">testcase.LoginTests</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">setUp(chrome, https://hrm.qabible.in/hrms/admin)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">tickets_test_incomplete_data</span>
-                <span class="method-start">48120 ms</span>
+                <span class="method-name">Valid_LoginTest</span>
+                <span class="method-start">6531 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">takeScreenshotOnFailure([TestResult name=tickets_test_incomplete_data status=SUCCESS method=TicketsTest.tickets_test_incompl...)</span>
-                <span class="method-start">55428 ms</span>
+                <span class="method-name">takeScreenshotOnFailure([TestResult name=Valid_LoginTest status=SUCCESS method=LoginTests.Valid_LoginTest()[pri:1, instance:...)</span>
+                <span class="method-start">12259 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">setUp(chrome, https://hrm.qabible.in/hrms/admin)</span>
-                <span class="method-start">55775 ms</span>
+                <span class="method-start">12511 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">tickets_test</span>
-                <span class="method-start">58320 ms</span>
+                <span class="method-name">Invalid_Username_Test</span>
+                <span class="method-start">14545 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">takeScreenshotOnFailure([TestResult name=tickets_test status=SUCCESS method=TicketsTest.tickets_test()[pri:2, instance:testc...)</span>
-                <span class="method-start">67205 ms</span>
+                <span class="method-name">takeScreenshotOnFailure([TestResult name=Invalid_Username_Test status=SUCCESS method=LoginTests.Invalid_Username_Test()[pri:...)</span>
+                <span class="method-start">15041 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">setUp(chrome, https://hrm.qabible.in/hrms/admin)</span>
+                <span class="method-start">15228 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">Invalid_Password_Test</span>
+                <span class="method-start">17324 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">takeScreenshotOnFailure([TestResult name=Invalid_Password_Test status=SUCCESS method=LoginTests.Invalid_Password_Test()[pri:...)</span>
+                <span class="method-start">17774 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">setUp(chrome, https://hrm.qabible.in/hrms/admin)</span>
+                <span class="method-start">17993 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">Invalid_LoginTest</span>
+                <span class="method-start">19848 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">takeScreenshotOnFailure([TestResult name=Invalid_LoginTest status=SUCCESS method=LoginTests.Invalid_LoginTest()[pri:4, insta...)</span>
+                <span class="method-start">20512 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
