--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,28 +1,28 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="78a09f">  <td>23/12/18 17:53:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String,java.lang.String)[pri:0, instance:testcase.EmployeeTest@5e0826e7]">&gt;&gt;setUp</td> 
+<tr bgcolor="78a09f">  <td>23/12/18 21:22:23</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.takeScreenshotOnFailure(org.testng.ITestResult)[pri:0, instance:testcase.LoginTests@5e0826e7]">&lt;&lt;takeScreenshotOnFailure</td> 
+<td>&nbsp;</td>  <td>main@613784740</td>   <td></td> </tr>
+<tr bgcolor="8174ba">  <td>23/12/18 21:22:23</td>   <td>-11</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTests.Invalid_LoginTest()[pri:4, instance:testcase.LoginTests@5e0826e7]">Invalid_LoginTest</td> 
+  <td>main@613784740</td>   <td></td> </tr>
+<tr bgcolor="78a09f">  <td>23/12/18 21:22:23</td>   <td>-15</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String,java.lang.String)[pri:0, instance:testcase.LoginTests@5e0826e7]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="8174ba">  <td>23/12/18 17:53:47</td>   <td>-9</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EmployeeTest.employee_blank_details()[pri:3, instance:testcase.EmployeeTest@5e0826e7]">employee_blank_details</td> 
-  <td>main@271095942</td>   <td></td> </tr>
-<tr bgcolor="78a09f">  <td>23/12/18 17:53:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String,java.lang.String)[pri:0, instance:testcase.EmployeeTest@5e0826e7]">&gt;&gt;setUp</td> 
+<tr bgcolor="8174ba">  <td>23/12/18 21:22:23</td>   <td>-30</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTests.Invalid_Password_Test()[pri:3, instance:testcase.LoginTests@5e0826e7]">Invalid_Password_Test</td> 
+  <td>main@613784740</td>   <td></td> </tr>
+<tr bgcolor="78a09f">  <td>23/12/18 21:22:23</td>   <td>-15</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String,java.lang.String)[pri:0, instance:testcase.LoginTests@5e0826e7]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="78a09f">  <td>23/12/18 17:53:47</td>   <td>9</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.takeScreenshotOnFailure(org.testng.ITestResult)[pri:0, instance:testcase.EmployeeTest@5e0826e7]">&lt;&lt;takeScreenshotOnFailure</td> 
-<td>&nbsp;</td>  <td>main@271095942</td>   <td></td> </tr>
-<tr bgcolor="78a09f">  <td>23/12/18 17:53:47</td>   <td>9</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.takeScreenshotOnFailure(org.testng.ITestResult)[pri:0, instance:testcase.EmployeeTest@5e0826e7]">&lt;&lt;takeScreenshotOnFailure</td> 
-<td>&nbsp;</td>  <td>main@271095942</td>   <td></td> </tr>
-<tr bgcolor="78a09f">  <td>23/12/18 17:53:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String,java.lang.String)[pri:0, instance:testcase.EmployeeTest@5e0826e7]">&gt;&gt;setUp</td> 
+<tr bgcolor="78a09f">  <td>23/12/18 21:22:23</td>   <td>-15</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String,java.lang.String)[pri:0, instance:testcase.LoginTests@5e0826e7]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="78a09f">  <td>23/12/18 17:53:47</td>   <td>9</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.takeScreenshotOnFailure(org.testng.ITestResult)[pri:0, instance:testcase.EmployeeTest@5e0826e7]">&lt;&lt;takeScreenshotOnFailure</td> 
-<td>&nbsp;</td>  <td>main@271095942</td>   <td></td> </tr>
-<tr bgcolor="8174ba">  <td>23/12/18 17:53:47</td>   <td>-42</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EmployeeTest.employee_skipped_employeeId()[pri:1, instance:testcase.EmployeeTest@5e0826e7]">employee_skipped_employeeId</td> 
-  <td>main@271095942</td>   <td></td> </tr>
-<tr bgcolor="8174ba">  <td>23/12/18 17:53:47</td>   <td>-18</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EmployeeTest.employee_skipped_lastname()[pri:2, instance:testcase.EmployeeTest@5e0826e7]">employee_skipped_lastname</td> 
-  <td>main@271095942</td>   <td></td> </tr>
-<tr bgcolor="8174ba">  <td>23/12/18 17:53:47</td>   <td>1</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EmployeeTest.employee_details()[pri:4, instance:testcase.EmployeeTest@5e0826e7]">employee_details</td> 
-  <td>main@271095942</td>   <td></td> </tr>
-<tr bgcolor="78a09f">  <td>23/12/18 17:53:47</td>   <td>9</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.takeScreenshotOnFailure(org.testng.ITestResult)[pri:0, instance:testcase.EmployeeTest@5e0826e7]">&lt;&lt;takeScreenshotOnFailure</td> 
-<td>&nbsp;</td>  <td>main@271095942</td>   <td></td> </tr>
-<tr bgcolor="78a09f">  <td>23/12/18 17:53:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String,java.lang.String)[pri:0, instance:testcase.EmployeeTest@5e0826e7]">&gt;&gt;setUp</td> 
+<tr bgcolor="8174ba">  <td>23/12/18 21:22:23</td>   <td>-78</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTests.Valid_LoginTest()[pri:1, instance:testcase.LoginTests@5e0826e7]">Valid_LoginTest</td> 
+  <td>main@613784740</td>   <td></td> </tr>
+<tr bgcolor="78a09f">  <td>23/12/18 21:22:23</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.takeScreenshotOnFailure(org.testng.ITestResult)[pri:0, instance:testcase.LoginTests@5e0826e7]">&lt;&lt;takeScreenshotOnFailure</td> 
+<td>&nbsp;</td>  <td>main@613784740</td>   <td></td> </tr>
+<tr bgcolor="78a09f">  <td>23/12/18 21:22:23</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.takeScreenshotOnFailure(org.testng.ITestResult)[pri:0, instance:testcase.LoginTests@5e0826e7]">&lt;&lt;takeScreenshotOnFailure</td> 
+<td>&nbsp;</td>  <td>main@613784740</td>   <td></td> </tr>
+<tr bgcolor="78a09f">  <td>23/12/18 21:22:23</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.takeScreenshotOnFailure(org.testng.ITestResult)[pri:0, instance:testcase.LoginTests@5e0826e7]">&lt;&lt;takeScreenshotOnFailure</td> 
+<td>&nbsp;</td>  <td>main@613784740</td>   <td></td> </tr>
+<tr bgcolor="78a09f">  <td>23/12/18 21:22:23</td>   <td>-15</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String,java.lang.String)[pri:0, instance:testcase.LoginTests@5e0826e7]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="8174ba">  <td>23/12/18 21:22:23</td>   <td>-47</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTests.Invalid_Username_Test()[pri:2, instance:testcase.LoginTests@5e0826e7]">Invalid_Username_Test</td> 
+  <td>main@613784740</td>   <td></td> </tr>
 </table>
