--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,16 +1,28 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9869f4">  <td>23/12/18 20:58:48</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String,java.lang.String)[pri:0, instance:testcase.TicketsTest@8462f31]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@271095942</td>   <td></td> </tr>
-<tr bgcolor="9869f4">  <td>23/12/18 20:58:59</td>   <td>11429</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.takeScreenshotOnFailure(org.testng.ITestResult)[pri:0, instance:testcase.TicketsTest@8462f31]">&lt;&lt;takeScreenshotOnFailure</td> 
-<td>&nbsp;</td>  <td>main@271095942</td>   <td></td> </tr>
-<tr bgcolor="f699d3">  <td>23/12/18 20:58:40</td>   <td>-7657</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TicketsTest.tickets_test_incomplete_data()[pri:1, instance:testcase.TicketsTest@8462f31]">tickets_test_incomplete_data</td> 
-  <td>main@271095942</td>   <td></td> </tr>
-<tr bgcolor="9869f4">  <td>23/12/18 20:58:59</td>   <td>11429</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.takeScreenshotOnFailure(org.testng.ITestResult)[pri:0, instance:testcase.TicketsTest@8462f31]">&lt;&lt;takeScreenshotOnFailure</td> 
-<td>&nbsp;</td>  <td>main@271095942</td>   <td></td> </tr>
-<tr bgcolor="f699d3">  <td>23/12/18 20:58:50</td>   <td>2544</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TicketsTest.tickets_test()[pri:2, instance:testcase.TicketsTest@8462f31]">tickets_test</td> 
-  <td>main@271095942</td>   <td></td> </tr>
-<tr bgcolor="9869f4">  <td>23/12/18 20:58:48</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String,java.lang.String)[pri:0, instance:testcase.TicketsTest@8462f31]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@271095942</td>   <td></td> </tr>
+<tr bgcolor="9869f4">  <td>23/12/18 21:39:24</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.takeScreenshotOnFailure(org.testng.ITestResult)[pri:0, instance:testcase.LoginTests@5ddeb7cb]">&lt;&lt;takeScreenshotOnFailure</td> 
+<td>&nbsp;</td>  <td>main@1176164144</td>   <td></td> </tr>
+<tr bgcolor="9869f4">  <td>23/12/18 21:39:22</td>   <td>-2521</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String,java.lang.String)[pri:0, instance:testcase.LoginTests@5ddeb7cb]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1176164144</td>   <td></td> </tr>
+<tr bgcolor="f699d3">  <td>23/12/18 21:39:18</td>   <td>-5969</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTests.Invalid_Username_Test()[pri:2, instance:testcase.LoginTests@5ddeb7cb]">Invalid_Username_Test</td> 
+  <td>main@1176164144</td>   <td></td> </tr>
+<tr bgcolor="f699d3">  <td>23/12/18 21:39:10</td>   <td>-13983</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTests.Valid_LoginTest()[pri:1, instance:testcase.LoginTests@5ddeb7cb]">Valid_LoginTest</td> 
+  <td>main@1176164144</td>   <td></td> </tr>
+<tr bgcolor="9869f4">  <td>23/12/18 21:39:22</td>   <td>-2521</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String,java.lang.String)[pri:0, instance:testcase.LoginTests@5ddeb7cb]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1176164144</td>   <td></td> </tr>
+<tr bgcolor="9869f4">  <td>23/12/18 21:39:24</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.takeScreenshotOnFailure(org.testng.ITestResult)[pri:0, instance:testcase.LoginTests@5ddeb7cb]">&lt;&lt;takeScreenshotOnFailure</td> 
+<td>&nbsp;</td>  <td>main@1176164144</td>   <td></td> </tr>
+<tr bgcolor="f699d3">  <td>23/12/18 21:39:23</td>   <td>-666</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTests.Invalid_LoginTest()[pri:4, instance:testcase.LoginTests@5ddeb7cb]">Invalid_LoginTest</td> 
+  <td>main@1176164144</td>   <td></td> </tr>
+<tr bgcolor="9869f4">  <td>23/12/18 21:39:22</td>   <td>-2521</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String,java.lang.String)[pri:0, instance:testcase.LoginTests@5ddeb7cb]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1176164144</td>   <td></td> </tr>
+<tr bgcolor="f699d3">  <td>23/12/18 21:39:21</td>   <td>-3190</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTests.Invalid_Password_Test()[pri:3, instance:testcase.LoginTests@5ddeb7cb]">Invalid_Password_Test</td> 
+  <td>main@1176164144</td>   <td></td> </tr>
+<tr bgcolor="9869f4">  <td>23/12/18 21:39:22</td>   <td>-2521</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String,java.lang.String)[pri:0, instance:testcase.LoginTests@5ddeb7cb]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1176164144</td>   <td></td> </tr>
+<tr bgcolor="9869f4">  <td>23/12/18 21:39:24</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.takeScreenshotOnFailure(org.testng.ITestResult)[pri:0, instance:testcase.LoginTests@5ddeb7cb]">&lt;&lt;takeScreenshotOnFailure</td> 
+<td>&nbsp;</td>  <td>main@1176164144</td>   <td></td> </tr>
+<tr bgcolor="9869f4">  <td>23/12/18 21:39:24</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.takeScreenshotOnFailure(org.testng.ITestResult)[pri:0, instance:testcase.LoginTests@5ddeb7cb]">&lt;&lt;takeScreenshotOnFailure</td> 
+<td>&nbsp;</td>  <td>main@1176164144</td>   <td></td> </tr>
 </table>
